samples/_failures_safe/1761276735_d9a56a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3d4a13f.c: In function ‘main’:
./samples/SAFE/__tmp_d3d4a13f.c:144:5: error: expected expression at end of input
  144 |     if (
      |     ^~
./samples/SAFE/__tmp_d3d4a13f.c:144:5: error: expected declaration or statement at end of input
